Feat: list Check 구현

--- a/todo-list/src/ListItem/TodoItem.module.css
+++ b/todo-list/src/ListItem/TodoItem.module.css
@@ -26,6 +26,11 @@
   color: #32cd32;
 }
 
+.checkedCircleIcon + span{
+  text-decoration: line-through;
+  color: #c0c0c0;
+}
+
 .unCheckedCircleIcon{
   color: #c0c0c0;
 }
